= Counterclockwise ChangeLog 
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: 
:toc-title!:
:toclevels: 0

== Changes between Counterclockwise 0.29.1 and 0.29.2

`0.29.2` released on November XX, 2014

=== Fix


== Changes between Counterclockwise 0.29.0 and 0.29.1

`0.29.1` released on November 13, 2014

=== Fix
- The `:repositories` Leinineng key was not currectly respected since the source files addition. Fix Issue #653 - Issue 653: Wrong error reports for dependency resolution, as well as issue reported on mailing by Alexander Taggart.
- Counterclockwise was too chatty when files were dragged from the filesystem (e.g. dragging jar files was triggering the 'do you want to create a leiningen project?' popup).
- Counterclockwise was triggering many times the 'do you want to create a leiningen project?' popup after a user declined or failed drag.
- The `letfn` form is indenting correctly the definitions of named functions inside the definition vector. Fix Issue #439
- Fix Issue #666 - Some :repository declarations in project.clj cause
- Make Leiningen created projects honor the Java Preference `Java > Build Path > Output folder name`.


== Changes between Counterclockwise 0.28.1 and 0.29.0

`0.29.0` released on October 20, 2014

This release is mostly a maintenance release. It is also the first release embedding Leiningen 2.5.0 instead of Leiningen 2.3.4.

=== Fix

- Removed default keybinding kbd:[Alt+Command+Q E] for command 'New REPL client for Eclipse embedded nrepl server (advanced usages) which was conflicting with a JDT command
- Fixed `Convert to Clojure Project` when one wants a quick & dirty way to add clojure jar to a project classpath
- Dragging a leiningen project already placed inside the workspace folder now works (was throwing an exception previously)

=== Enhancements
- Embedded Leiningen version upgraded from version 2.3.4 to 2.5.0